--- a/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
+++ b/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modelo\Sensor.cs" />
+    <Compile Include="Modelo\Piso.cs" />
     <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
