--- a/GerenciadorDomotico/GerenciadorDomotico/GerenciadorDomotico.csproj
+++ b/GerenciadorDomotico/GerenciadorDomotico/GerenciadorDomotico.csproj
@@ -31,7 +31,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Imagens\engrenagemICONE.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data.CF, Version=6.9.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -118,7 +122,15 @@
       <Project>{1830c7e9-bf13-402e-9caa-2a04227310c9}</Project>
       <Name>Biblioteca</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Dados\Dados.csproj">
+      <Project>{9437e71d-f3d6-42fe-91cd-51ac373f9594}</Project>
+      <Name>Dados</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Imagens\engrenagemICONE.ico" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
