--- a/GerenciadorDomotico/GerenciadorServico/Servico.csproj
+++ b/GerenciadorDomotico/GerenciadorServico/Servico.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Service.Designer.cs">
       <DependentUpon>Service.cs</DependentUpon>
     </Compile>
-    <Compile Include="GerenciadorServico.cs" />
+    <Compile Include="MainServico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
