Alterações nas telas de Dispositivos
- Tela de cadastro de Dispositivos basicamente finalizada
- Tela de Operação dos Dispositivos criada
- Novo ícone do sistema

--- a/GerenciadorDomotico/GerenciadorDomotico/Gerenciador.csproj
+++ b/GerenciadorDomotico/GerenciadorDomotico/Gerenciador.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Imagens\engrenagemICONE.ico</ApplicationIcon>
+    <ApplicationIcon>Imagens\GreenHome.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -186,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Imagens\engrenagemICONE.ico" />
+    <Content Include="Imagens\GreenHome.ico" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
