--- a/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
+++ b/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comunicação\MensagemDispositivo.cs" />
     <Compile Include="Controle\controlBase.cs" />
     <Compile Include="Controle\controlLog.cs" />
     <Compile Include="Modelo\Atributos\AtributoClasse.cs" />
@@ -77,9 +78,7 @@
       <Name>Dados</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Comunicação\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
