--- a/GerenciadorDomotico/GerenciadorServico/Servico.csproj
+++ b/GerenciadorDomotico/GerenciadorServico/Servico.csproj
@@ -57,9 +57,11 @@
       <HintPath>..\Dados\MySql.Data.CF.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Channels" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
