--- a/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
+++ b/GerenciadorDomotico/Biblioteca/Biblioteca.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Channels" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -59,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comunicação\IwsrvHomeOn.cs" />
+    <Compile Include="Comunicação\wsrvHomeOnClient.cs" />
     <Compile Include="Comunicação\MensagemDispositivo.cs" />
     <Compile Include="Controle\controlBase.cs" />
     <Compile Include="Controle\controlLog.cs" />
@@ -79,7 +84,9 @@
       <Name>Dados</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
