Nova tela de Visualização de Logs pronta
Além da nova tela, alguns dos dispositivos já foram preparados para
receber dados. Além disso, os dispositivos desconectados já são exibidos
corretamente.

--- a/GerenciadorDomotico/GerenciadorDomotico/Gerenciador.csproj
+++ b/GerenciadorDomotico/GerenciadorDomotico/Gerenciador.csproj
@@ -107,6 +107,12 @@
     <Compile Include="ctlConfiguradorGeral.Designer.cs">
       <DependentUpon>ctlConfiguradorGeral.cs</DependentUpon>
     </Compile>
+    <Compile Include="ctlLogs.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ctlLogs.Designer.cs">
+      <DependentUpon>ctlLogs.cs</DependentUpon>
+    </Compile>
     <Compile Include="ctlPainel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -184,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ctlConfiguradorGeral.resx">
       <DependentUpon>ctlConfiguradorGeral.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ctlLogs.resx">
+      <DependentUpon>ctlLogs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ctlPainel.resx">
       <DependentUpon>ctlPainel.cs</DependentUpon>
